k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tech-challenge-2
  labels:
    name: tech-challenge-2
